--- a/buttons.html
+++ b/buttons.html
@@ -21,6 +21,19 @@
     border-radius: 2px;
     cursor: pointer;
   }
+
+  .tweet-button {
+    background-color: rgb(0, 144, 228);
+    color: white;
+    border: none;
+    height: 36px;
+    width: 74px;
+    border-radius: 18px;
+    font-weight: bold;
+    font-size: 15px;
+    cursor: pointer;
+    margin-left: 8px;
+  }
 </style>
 
 <button class="subscribe-button">
@@ -29,4 +42,8 @@
 
 <button class="join-button">
   JOIN
+</button>
+
+<button class="tweet-button">
+  Tweet
 </button>
