--- a/buttons.html
+++ b/buttons.html
@@ -21,10 +21,10 @@
 
   .join-button {
     background-color: white;
-    border-color: rgb(41, 118, 211);
+    border-color: rgb(6, 95, 212);
     border-style: solid;
     border-width: 1px;
-    color: rgb(41, 118, 211);
+    color: rgb(6, 95, 212);
     height: 36px;
     width: 62px;
     border-radius: 2px;
@@ -33,7 +33,7 @@
   }
 
   .join-button:hover {
-    background-color: rgb(41, 118, 211);
+    background-color: rgb(6, 95, 212);
     color: white;
   }
 
@@ -42,7 +42,7 @@
   }
 
   .tweet-button {
-    background-color: rgb(0, 144, 228);
+    background-color: rgb(29, 155, 240);
     color: white;
     border: none;
     height: 36px;
@@ -57,6 +57,10 @@
 
   .tweet-button:hover {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
+  }
+
+  .tweet-button:active {
+    opacity: 0.7;
   }
 </style>
 
