--- a/text.html
+++ b/text.html
@@ -30,6 +30,22 @@
     font-size: 14px;
     color: rgb(96, 96, 96);
     line-height: 20px;
+    margin-bottom: 30px;
+  }
+  
+  .apple-text {
+    margin-bottom: 50px;
+    font-size: 14px;
+    background-color: rgb(227, 65, 64);
+    color: white;
+    text-align: center;
+    padding-top: 18px;
+    padding-bottom: 18px;
+  }
+
+  .shop-link:hover {
+    text-decoration: underline;
+    cursor: pointer;
   }
 </style>
 
@@ -47,4 +63,8 @@
 
 <p class="video-description"> 
   Talking tech and AI on the heels of Google I/O. Also a daily driver phone reveal from Google's CEO Shoutout to Sundar!
+</p>
+
+<p class="apple-text">
+  Shop early for the best selection of holiday favourites. <span class="shop-link">Shop now &#62;</span>
 </p>
